# safer-parks

./: .gitignore  README.md  environment.yml  pyproject.toml
development_notebooks/: 00_Acquiring_open_parks_data.ipynb  01_Processing_parks_data.ipynb  02_Park_entrance_calculations.ipynb  03_network_analysis_data_cleaning.ipynb  04_General_coord_transformations.ipynb
src/safer_parks/: __init__.py  entrances.py  example.py  geospatial_utils.py
tests/: test_geospatial_utils.py
